--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Website</title>
 </head>
 <body>
-    <h1>Toto au toilette</h1>
+    <h1>Toto au toilette de l'ecole de Namur</h1>
 </body>
 </html>
